policies/components/rbac/disallow-role-with-wildcards/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-role-with-wildcards
policies:
  - disallow-role-with-wildcards.yaml
resources:
  - resources.yaml
variables: ../../values.yaml
results:
  - kind: Role
    policy: ibm-disallow-role-with-wildcards
    resources:
      - badrole-wildcard-in-resources
      - badrole-wildcard-in-verbs
    result: fail
    rule: disallow-wildcards
  - kind: Role
    policy: ibm-disallow-role-with-wildcards
    resources:
      - goodrole
    result: pass
    rule: disallow-wildcards
